[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/item.gd" type="Script" id=1]

[node name="item" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 16.2852
margin_right = -100.0
margin_bottom = -673.715
rect_min_size = Vector2( 335, 110 )
script = ExtResource( 1 )

[node name="lbl_id" type="Label" parent="."]
visible = false
margin_left = 25.1459
margin_top = 19.2885
margin_right = 53.1459
margin_bottom = 33.2885
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "ID"

[node name="lbl_tier" type="Label" parent="."]
margin_left = 5.42624
margin_top = 2.99835
margin_right = 33.4262
margin_bottom = 16.9984
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"

[node name="lbl_level" type="Label" parent="."]
margin_left = 101.452
margin_top = 88.7359
margin_right = 129.452
margin_bottom = 102.736
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"

[node name="lbl_loc_name" type="Label" parent="."]
margin_left = 59.0
margin_top = 9.0
margin_right = 320.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "localized name"

[node name="lbl_desc" type="Label" parent="."]
margin_left = 14.0
margin_top = 43.0
margin_right = 322.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "description

"
autowrap = true

